--- a/arch/arm/configs/0googymax4_TW_defconfig
+++ b/arch/arm/configs/0googymax4_TW_defconfig
@@ -47,6 +47,7 @@ CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 #
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
