ARM: add support for kernel mode NEON
Signed-off-by: Paul Reioux <reioux@gmail.com>

Conflicts:
	arch/arm/configs/0googymax3_defconfig
	arch/arm/vfp/vfpmodule.c

--- a/arch/arm/configs/0googymax4_TW_defconfig
+++ b/arch/arm/configs/0googymax4_TW_defconfig
@@ -4,6 +4,7 @@ CONFIG_LOCALVERSION="-GoogyMax4_TW-v1.0"
 # Googy-Max4
 #
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+CONFIG_KERNEL_MODE_NEON=y
 #
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
