--- a/arch/arm/configs/0googymax4_TW_defconfig
+++ b/arch/arm/configs/0googymax4_TW_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-GoogyMax4_TW-v0.2a"
+CONFIG_LOCALVERSION="-GoogyMax4_TW-v0.2c_20"
 # CONFIG_LOCALVERSION_AUTO is not set
 #
 # Googy-Max4
