Add Faux Sound (thx Faux123)

--- a/arch/arm/configs/0googymax4_TW_defconfig
+++ b/arch/arm/configs/0googymax4_TW_defconfig
@@ -3,6 +3,8 @@ CONFIG_LOCALVERSION="-GoogyMax4_TW-v0.2c_106"
 #
 # Googy-Max4
 #
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+#
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
 CONFIG_KERNEL_LZO=y
