--- a/arch/arm/configs/0googymax4_TW_defconfig
+++ b/arch/arm/configs/0googymax4_TW_defconfig
@@ -45,6 +45,7 @@ CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_INTELLI_THERMAL_V2=y
 CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_FORCE_FAST_CHARGE=y
 #
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
