--- a/arch/arm/configs/0googymax4_TW_defconfig
+++ b/arch/arm/configs/0googymax4_TW_defconfig
@@ -46,6 +46,7 @@ CONFIG_INTELLI_THERMAL_V2=y
 CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 #
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
