--- a/arch/arm/configs/0googymax4_TW_defconfig
+++ b/arch/arm/configs/0googymax4_TW_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-GoogyMax4_TW-v1.2"
+CONFIG_LOCALVERSION="-GoogyMax4_TW-v1.3-b9"
 # CONFIG_LOCALVERSION_AUTO is not set
 #
 # Googy-Max4
@@ -43,7 +43,7 @@ CONFIG_DEFAULT_CUBIC=y
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_INTELLI_THERMAL_V2=y
-CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
+# CONFIG_MSM_CPU_VOLTAGE_CONTROL is not set
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
