--- a/arch/arm/configs/0googymax4_TW_defconfig
+++ b/arch/arm/configs/0googymax4_TW_defconfig
@@ -49,6 +49,7 @@ CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_KERNEL_MODE_NEON=y
+CONFIG_SCHED_AUTOGROUP=y
 #
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
