--- a/arch/arm/configs/0googymax4_TW_defconfig
+++ b/arch/arm/configs/0googymax4_TW_defconfig
@@ -50,6 +50,10 @@ CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_KERNEL_MODE_NEON=y
 CONFIG_SCHED_AUTOGROUP=y
+CONFIG_CPU_FREQ_GOV_INTELLIMM=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_SMARTMAX=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
 #
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
