--- a/arch/arm/configs/0googymax4_TW_defconfig
+++ b/arch/arm/configs/0googymax4_TW_defconfig
@@ -55,6 +55,7 @@ CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_FREQ_GOV_SMARTMAX=y
 CONFIG_CPU_FREQ_GOV_IMPULSE=y
 CONFIG_KSM=y
+CONFIG_F2FS_FS=y
 #
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
